# media-player

./: CMakeLists.txt  README.md
src/: main.c
